; ModuleID = '/home/carl/AnghaBench/radare2/libr/cons/extr_stiv.c_selectrenderer.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/cons/extr_stiv.c_selectrenderer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@render_ascii = common dso_local global i32 0, align 4
@renderer = common dso_local global i32 0, align 4
@render_ansi = common dso_local global i32 0, align 4
@render_greyscale = common dso_local global i32 0, align 4
@render_256 = common dso_local global i32 0, align 4
@render_rgb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @selectrenderer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @selectrenderer(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  switch i32 %3, label %12 [
    i32 97, label %4
    i32 65, label %6
    i32 103, label %8
    i32 50, label %10
  ]

4:                                                ; preds = %1
  %5 = load i32, i32* @render_ascii, align 4
  store i32 %5, i32* @renderer, align 4
  br label %14

6:                                                ; preds = %1
  %7 = load i32, i32* @render_ansi, align 4
  store i32 %7, i32* @renderer, align 4
  br label %14

8:                                                ; preds = %1
  %9 = load i32, i32* @render_greyscale, align 4
  store i32 %9, i32* @renderer, align 4
  br label %14

10:                                               ; preds = %1
  %11 = load i32, i32* @render_256, align 4
  store i32 %11, i32* @renderer, align 4
  br label %14

12:                                               ; preds = %1
  %13 = load i32, i32* @render_rgb, align 4
  store i32 %13, i32* @renderer, align 4
  br label %14

14:                                               ; preds = %12, %10, %8, %6, %4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
